Bug 1890135 - Fix folder compaction to not fail on zero-size mbox files. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D206852

--HG--
extra : amend_source : df6d2144250613c19487f9e8f15f79e7aff7804d